--- a/styles/style.css
+++ b/styles/style.css
@@ -14,16 +14,41 @@ font-weight: 800;
 line-height: normal;
 }
 
+.text-normal{
+    color: #FF5400;
+text-align: center;
+font-family: Mulish;
+font-size: 18px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+
+}
+
+.btn-main{
+    width: 174px;
+height: 52px;
+border-radius: 8px;
+background: #FF5400;
+border: 0;
+color: #FFF;
+text-align: center;
+font-family: Mulish;
+font-size: 20px;
+font-weight: 800;
+margin-top: 30px;
+}
+
+
 body{
     margin: 0;
     padding: 0;
-    border: 3px solid red;
+  
 }
 
 /* header style */
 header{
-    
-    border:  2px solid blue;
+    width: 1120px;
     margin: 50px 140px ;
 }
 
@@ -56,7 +81,8 @@ line-height: normal;
     display: flex;
     width: 500px;
     height: auto;
-   
+    justify-content: center;
+    align-self: center;
 }
 
 .header-nav li{
@@ -75,13 +101,55 @@ font-style: normal;
 font-weight: 400;
 line-height: normal;
 }
-
+/* main section style */
 main{
-    max-width: 1000px;
+    width: 1120px;
     margin: 50px 140px;
 }
+
+/*banner section style */
+.banner-container{
+    background-image: url('../Images/Group\ 13.png');
+
+    width: 100%;
+}
+
+
+
+
+/*  tour section style */
 .tour-container{
     display: flex;
     justify-content: space-between;
     gap: 50px;
 }
+.tour-text{
+    justify-content: center;
+    align-self: center;
+}
+.tour-text h3{
+    color: #131318;
+text-align: left;
+font-family: Mulish;
+font-size: 40px;
+font-style: normal;
+font-weight: 800;
+line-height: normal;
+}
+
+.tour-text p ,ul {
+    color: rgba(19, 19, 24, 0.70);
+font-family: Mulish;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px;
+}
+.tour-text 
+
+
+
+
+
+
+
